<resources>
    <string name="app_name">Cinemax</string>

    <string name="movie_title">The Secret Life of Pets</string>
    <string name="movie_overview">The quiet life of a terrier named Max is upended when his owner
        takes in Duke, a stray whom Max instantly dislikes.</string>
    <string name="tagline">Every fairy tale has a dark side.</string>
    <string name="synopsis">Synopsis</string>
    <string name="movie_synopsis_large">When a wounded Christian Grey tries to entice a cautious Ana Steele back into his life, she demands a new arrangement before she will give him another chance. As the two begin to build trust and find stability, shadowy figures from Christian’s past start to circle the couple, determined to destroy their hopes for a future together.</string>
    <string name="trailers">Trailers</string>
    <string name="trailer_name">Fifty Shades Darker - Official Trailer 2</string>
    <string name="youtube">YouTube</string>
    <string name="site">Site : </string>
    <string name="quality">Quality : </string>
    <string name="similar_movies">Similar Movies</string>
    <string name="rating_value">4.5</string>
    <string name="movie_time">1h 58 min</string>
    <string name="lead_cast">Lead Cast</string>
    <string name="actor_name">Jamie Dornan</string>
    <string name="reviewer_name">Ganesan</string>
    <string name="reviewer_review">Movie was quite awesome</string>
    <string name="reviews">Reviews</string>
    <string name="share">Share</string>
    <string name="vote_average_value">9.1 / 10</string>
    <string name="vote_count_value">21976 votes</string>
    <string name="shared_poster">shared_poster</string>
    <string name="browse">Browse</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="info_and_feedback">Info and feedback</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_popular">Popular</string>
    <string name="title_on_the_air">On The Air</string>
    <string name="title_air_shows">Air Shows</string>
    <string name="title_airing_today">Airing Today</string>
    <string name="title_trending">Trending</string>
    <string name="title_latest">Latest</string>
</resources>
