<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/four_dp_dimen"
    android:layout_marginBottom="@dimen/four_dp_dimen"
    android:layout_marginLeft="@dimen/eight_dp_dimen"
    android:layout_marginRight="@dimen/eight_dp_dimen"
    android:elevation="@dimen/eight_dp_dimen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/trailer_iv"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/movie_cover" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/trailer_iv"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/trailer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="@string/trailer_name" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/six_dp_dimen"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/site" />

                <TextView
                    android:id="@+id/trailer_site"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    tools:text="@string/youtube" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/six_dp_dimen"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quality" />

                <TextView
                    android:id="@+id/trailer_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    tools:text="1080p" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>